--- a/更新日志-必看.md
+++ b/更新日志-必看.md
@@ -4,4 +4,6 @@
 **html和word可以参考最新的~**
 
 **更新频率最低一天一更，当然如果没有啥新情况或者值得说明的就不更新啦~**
+
+**幕布链接[可收缩,持更,但只有阅读者权限]**:[](https://mubu.com/colla/6kifSPpmL5x)
 ![](./QQ截图20210527212812.png)
