--- a/更新日志-必看.md
+++ b/更新日志-必看.md
@@ -7,4 +7,4 @@
 
 **幕布链接[可收缩,持更,但只有阅读者权限]**:[幕布链接](https://mubu.com/colla/2ACjiAWVj5x)
 
-![](./media/QQ浏览器截图20210528191617.png)
+![](./media/QQ截图20210530013014.png)
