因为太菜且时间有限，作者于20210627决定：github不再更新，幕布会照常及时更新！

--- a/更新日志-必看.md
+++ b/更新日志-必看.md
@@ -1,13 +1,8 @@
 # 更新日志-必看
-**此文件是更新说明，其实html也会写,都一样啦~**
 
-**html和word可以参考最新的~**
-
-**更新频率最低一天一更，当然如果没有啥新情况或者值得说明的就不更新啦~**
+**因为太菜且时间有限，作者于20210627决定：github不再更新，幕布会照常及时更新！**
 
 **幕布链接[可收缩,持更,但只有阅读者权限]**:[幕布链接](https://mubu.com/colla/2ACjiAWVj5x)
-
-**或者直接看Readme.md**
 
 ![](./media/QQ截图20210530013014.png)
 ![](./media/ss603604.png)
